# ColorMaps

./: CMakeLists.txt  ColorMaps.bib  ColorMaps.pptx  ColorMaps.tex  clrscode.sty  plates.sty  vgtc.cls
tools/ParaView/: BlueYellowColorMap.xml  CanColoring.xml  GreenRedColorMap.xml  Map.pvsm  Shuttle.pvsm
tools/ParaView/Plugin/: CMakeLists.txt  ColorMapsPluginGUI.xml  ColorMapsPluginSM.xml  vtkCIELABAxisSource.cxx  vtkCIELABAxisSource.h  vtkCIELABGamutSource.cxx  vtkCIELABGamutSource.h  vtkColorMapPlot.cxx  vtkColorMapPlot.h  vtkColorVectorSource.cxx  vtkColorVectorSource.h
tools/VTK/: CMakeLists.txt  generate_samples.cxx  generate_samples.h  make_images.cxx
tools/excel/: DivergentColorMapWorkshop.xls
tools/mathematica/: ColorConvert.nb
