PROJECT(ColorMaps NONE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

INCLUDE(UseLATEX.cmake)
ADD_LATEX_DOCUMENT(ColorMaps.tex
  BIBFILES ColorMaps.bib
  IMAGE_DIRS images
  )

OPTION(BUILD_CODE "Build the VTK based code." OFF)
IF (BUILD_CODE)
  ADD_SUBDIRECTORY(tools/VTK)
ENDIF (BUILD_CODE)

OPTION(BUILD_PV_PLUGIN "Build plugin for ParaView." OFF)
IF (BUILD_PV_PLUGIN)
  ADD_SUBDIRECTORY(tools/ParaView/Plugin)
ENDIF (BUILD_PV_PLUGIN)
